# Medify

./: CMakeLists.txt  LICENSE  README.md
assets/: Medify.icns
docs/: AudioConverter.md  CompressMedia.md  ExtractAudio.md  ImagesToPdf.md  PdfToImage.md  SplitPdf.md  VideoConverter.md
include/: MainWindow.h  ProcessManager.h
include/tools/: ITool.h
include/tools/audio_converter/: AudioConverterTool.h  AudioConverterWorker.h
include/tools/compress_media/: CompressMediaTool.h  CompressMediaWorker.h
include/tools/extract_audio/: ExtractAudioTool.h  ExtractAudioWorker.h
include/tools/images_to_pdf/: ImagesToPdfTool.h  ImagesToPdfWorker.h
include/tools/pdf_to_image/: PdfToImageTool.h  PdfToImageWidget.h  PdfToImageWorker.h
include/tools/split_pdf/: SplitPdfTool.h  SplitPdfWidget.h  SplitPdfWorker.h
include/tools/video_converter/: VideoConverterTool.h  VideoConverterWorker.h
include/ui/: BaseToolWidget.h  MainWindow.h
include/workers/: BaseWorker.h
src/: MainWindow.cpp  ProcessManager.cpp  main.cpp
src/tools/audio_converter/: AudioConverterTool.cpp  AudioConverterWorker.cpp
src/tools/compress_media/: CompressMediaTool.cpp  CompressMediaWorker.cpp
src/tools/extract_audio/: ExtractAudioTool.cpp  ExtractAudioWorker.cpp
src/tools/images_to_pdf/: ImagesToPdfTool.cpp  ImagesToPdfWorker.cpp
src/tools/pdf_to_image/: PdfToImageTool.cpp  PdfToImageWidget.cpp  PdfToImageWorker.cpp
src/tools/split_pdf/: SplitPdfTool.cpp  SplitPdfWidget.cpp  SplitPdfWorker.cpp
src/tools/video_converter/: VideoConverterTool.cpp  VideoConverterWorker.cpp
src/ui/: BaseToolWidget.cpp  MainWindow.cpp
src/workers/: BaseWorker.cpp
